// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle Controlled Toggle 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Controlled Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Controlled Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Controlled Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 gbtGXP"
            color="currentColor"
            font-size="medium"
          >
            off
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        class="ClickInputLabel-zdnqd7-0 cdVzeO"
      >
        <div
          class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
            type="checkbox"
            value="on"
          />
          <span
            class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle set to defaultToggled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-t7wo9n-2 cZtZve"
              disabled=""
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 elsUGm"
              disabled=""
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 kDRcgd"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
            off
          </p>
        </div>
      </div>
    </div>
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-t7wo9n-2 cZtZve"
              disabled=""
              id="toggle-2"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 elsUGm"
              disabled=""
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 kDRcgd"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
            on
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
          <span
            class="Text-sc-15glbbx-0 lfjkof"
            color="darkGrey"
            font-size="12px"
          >
            (Required)
          </span>
          <p
            class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
            color="currentColor"
            font-size="medium"
          >
            Turns setting on/off
          </p>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="true"
              checked=""
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              required=""
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 gbtGXP"
            color="currentColor"
            font-size="medium"
          >
            on
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle With custom id 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              id="my-custom-id"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 gbtGXP"
            color="currentColor"
            font-size="medium"
          >
            off
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle With long text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              checked=""
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 gbtGXP"
            color="currentColor"
            font-size="medium"
          >
            this state has a very long text label to explain it's state
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle With text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 gbtGXP"
            color="currentColor"
            font-size="medium"
          >
            off
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle using ref to control focus 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih Toggle__StyledToggle-sc-1tq854q-0 kqNxA"
    >
      <div
        id="Toggle-label"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Toggle
          </span>
        </div>
        <div
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <div
            class="ToggleButton__Switch-t7wo9n-1 cKYWZm"
          >
            <input
              aria-invalid="false"
              aria-labelledby="Toggle-label"
              aria-required="false"
              class="ToggleButton__ToggleInput-t7wo9n-2 qQGAa"
              id="my-custom-id"
              type="checkbox"
              value="on"
            />
            <span
              class="ToggleButton__Slider-t7wo9n-0 fkKnqB"
            />
          </div>
          <p
            class="Text-sc-15glbbx-0 gbtGXP"
            color="currentColor"
            font-size="medium"
          >
            off
          </p>
        </div>
      </div>
    </div>
    <button
      class="Button__WrapperButton-hxfi59-0 kXvjuR"
    >
      Focus the Toggle
    </button>
  </div>
</div>
`;
